fix ie9 and safari layout broken

--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -21,7 +21,8 @@
 
 .contact-bar img {
     height: 27px;
-    margin-right: 6px;
+    margin-right: 6px; 
+    border: 0px;
 }
 
 .contact-bar img:hover {
