--- a/app/public/css/site.css
+++ b/app/public/css/site.css
@@ -50,6 +50,15 @@ a{
         background-size: 100% 100%;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        -webkit-background-size: 100% 100%;
+        -moz-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+        -webkit-background-repeat: no-repeat;
+        -moz-background-repeat: no-repeat;
+        -o-background-repeat: no-repeat; 
+        -webkit-background-attachment: fixed;
+        -moz-background-attachment: fixed;
+        -o-background-attachment: fixed;
         opacity: unset;
     }
 
